cmake_minimum_required(VERSION 3.21)
project(CP4)

set(CMAKE_CXX_STANDARD 17)

add_executable(CP4
        Ch1/UVa_1124.cpp
        Ch1/UVa_11172.cpp
        Ch1/UVa_12372.cpp
        Ch1/UVa_13025.cpp
        Ch1/UVa_11044.cpp
        Ch1/UVa_11614.cpp
        Ch1/UVa_12250.cpp
        Ch1/UVa_11547.cpp
        Ch1/UVa_10071.cpp)
